bitmask successfully decrypting static amount
